Added obstacles and they are moving towards the player

--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,8 @@
     background-color: black;
     position: absolute;
 }
+
+.obstacle {
+    background-color: rgb(138, 17, 17);
+    position: absolute;
+}
