--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,8 @@
     background-image: url(../images/water.png);
     background-repeat: no-repeat;
 }
+
+.shot {
+    position: absolute;
+    background-color: rgb(231, 64, 14);
+}
